# playfair

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  makefile.yml  rust.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
tests/: playfair_tests.rs
