[package]
name = "playfair"
version = "0.1.0"
authors = ["Braxton (taxborn) Fair <hello@taxborn.com>"]
edition = "2021"
description = "A Playfair Cipher implementation in Rust"
license = "MIT"
repository = "https://github.com/taxborn/playfair-rs"
rust-version = "1.65.0"
documentation = "https://docs.rs/playfair/latest/playfair/"
keywords = ["playfair", "cipher"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
