[package]
name = "playfair"
version = "1.0.0"
authors = ["Braxton (taxborn) Fair <hello@taxborn.com>"]
edition = "2021"
description = "A Playfair Cipher implementation in Rust"
license = "MIT"
repository = "https://github.com/taxborn/playfair-rs"
documentation = "https://docs.rs/playfair/latest/playfair/"
keywords = ["playfair", "cipher"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
